CHANGELOG

2015-05-12  3.3.1
    * FIX: Compatibility with AngularJS old promise implementation
      We now use $q.defer() instead of $q()

2015-05-12  3.3.0
    * FEATURE: expose window.algoliasearch = algoliasearch in jquery/angular plugins. So that
    you can use the original algoliasearch() implem in plugins. Otherwise you would have to load both

2015-05-11  3.2.4
    * FIX: 15s inactivity timeout for nodejs implementation, should help high latency/low connection users
    * CHORE: test on iojs2
    * CHORE: debugging messages now more focused and less verbose
    * PERF: use JSON.stringify only once per request

2015-05-09  3.2.3
    * FIX: Parse build requires a charset on requests

2015-05-06  3.2.2
    * FIX :  missing require (crypto) for node.js client (#84)

2015-04-29  3.2.1
    * add dist/ to npmjs repository, so cdnjs autoupdate works

2015-04-24  3.2.0
    * FEATURE: Parse build now uses V3 implementation
    * FEATURE: Parse build now returns parse promises. https://parse.com/docs/js_guide#promises
    * FEATURE: Automatically handle HTTP_PROXY HTTPS_PROXY environment variables
    in Node.js client

2015-04-14  3.1.0
    * CHANGE: Node.js will now use http headers instead of inlining them into the api call as browsers are doing
    * CHANGE: Ensure all headers (http, querystrings) are lowercased. Both are supported by our API, reduces FUD
    * FEATURE: add index.getObjects()
    * FEATURE: add index.deleteObjects()
    * FIX: waitTask failure case when using promises, was not going through
    * FEATURE: add index.deleteByQuery()
    * FEATURE (Node.js): add client.enableRateLimitForward()
    * FEATURE (Node.js): add client.disableRateLimitForward()
    * FEATURE (Node.js): add client.useSecuredAPIKey()
    * FEATURE (Node.js): add client.disableSecuredAPIKey()
    * BREAKING CHANGE (Node.js): client.setTimeout renamed to client.setRequestTimeout
    * TEST: add test around setRequestTimeout