@@ -1,5 +1,8 @@
 CHANGELOG
 
+UNRELEASED
+    * FIX: more fixes to the use of $q() in the angular build, now compatible with 1.2.xx and tested
+
 2015-05-12  3.3.1
     * FIX: Compatibility with AngularJS old promise implementation
       We now use $q.defer() instead of $q()
